# general_database

./: README.md  gh_push.sh  publish.sh  pubspec.yaml
.github/: FUNDING.yml
.github/workflows/: beta_compile.yaml
native_lib/: CMakeLists.txt  readme.md
package/general_database/: pubspec.yaml
package/general_database/example/: general_database_example.dart
package/general_database/lib/: general_database.dart
package/general_database/test/: general_database_test.dart
package/general_database_android/: pubspec.yaml
package/general_database_android/lib/: general_database_android.dart
package/general_database_android/test/: general_database_android_test.dart
package/general_database_apis/: README.md  pubspec.yaml
package/general_database_apis/example/: general_database_apis_example.dart
package/general_database_apis/lib/: general_database_apis.dart
package/general_database_apis/test/: general_database_apis_test.dart
package/general_database_cli/: README.md  pubspec.yaml
package/general_database_cli/example/: general_database_cli_example.dart
package/general_database_cli/lib/: general_database_cli.dart
package/general_database_cli/test/: general_database_cli_test.dart
package/general_database_client/: pubspec.yaml
package/general_database_client/example/: general_database_client_example.dart
package/general_database_client/lib/: general_database_client.dart
package/general_database_client/test/: general_database_client_test.dart
package/general_database_dart/: pubspec.yaml
package/general_database_dart/example/: general_database_dart_example.dart
package/general_database_flutter/: pubspec.yaml
package/general_database_fucshia/: pubspec.yaml
package/general_database_ios/: pubspec.yaml
package/general_database_linux/: pubspec.yaml
package/general_database_macos/: pubspec.yaml
package/general_database_server/: pubspec.yaml
package/general_database_web/: pubspec.yaml
package/general_database_windows/: pubspec.yaml
test/: general_database_test.dart
(+19 files in other folders)
